DEVKUB-25 - Администрирование и конфигурация Kubernetes/12 - Конфигурация приложений/dep2.yml
apiVersion: v1
kind: Service
metadata:
  name: dep2-svc
spec:
  selector:
    app: dep2
  ports:
  - name: dep2-svc-http-port
    port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dep2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kub.nobr.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dep2-svc
            port:
              number: 80
  tls:
  - hosts:
    - kub.nobr.local
    secretName: dep2-secret-tls
